# ansible-lens

./: .git-blame-ignore-revs  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  ruff.toml  rust-toolchain.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
server/: Cargo.toml
server/src/: backend.rs  config.rs  flatten.rs  index.rs  jinja.rs  main.rs  precedence.rs
tests/: debug_driver.py  diagnostics_test.py  resolution_test.py  smoke_test.py  watch_test.py
tests/fixtures/: extra_play.yml  playbook.yml
tests/fixtures/group_vars/: all.yml  db_servers.yml  vault.yml
tests/fixtures/host_vars/: db1.yml
tests/fixtures/inv_demo/: hosts.yml
tests/fixtures/inv_demo/group_vars/: all.yml  webservers.yml
tests/fixtures/inv_demo/host_vars/: web1.yml
tests/fixtures/inv_other/: hosts.yml
tests/fixtures/inv_other/group_vars/: webservers.yml
tests/fixtures/roles/demo/defaults/: main.yml
tests/fixtures/roles/percona/defaults/: main.yml
tests/fixtures/roles/percona/tasks/: main.yml
tests/fixtures/roles/percona/vars/: main.yml
