[package]
name = "ansible-lens-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server providing Go-to-Definition for nested Ansible/Jinja2 variables"
license = "GPL-3.0-only"

[[bin]]
name = "ansible-lens-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "time"] }
marked-yaml = "0.8"
walkdir = "2"
serde_json = "1"
